# OutsShimmerppExamples

./: CMakeLists.txt  NFT_output.cpp  README.md  alias_output.cpp  basic_output.cpp  foundry_output.cpp
.github/workflows/: build-test-install.yml
